--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ a {
 }
 
 img {
-	display: block;
+    display: block;
     margin-left: auto;
     margin-right: auto;
     max-height: 100%;
@@ -36,7 +36,8 @@ img.profile-pic {
 	height: 30%;
 	width: 30%;
 	object-fit: cover;
-	border-radius: 50%;
+	border-radius: 0%;
+	border: 1px solid #fff;
 }
 
 .container {
@@ -135,7 +136,7 @@ img.profile-pic {
 }
 
 .bg-color-grey {
-	background-color: #F2F2F2;
+	background-color: #23272e;
 }
 
 .bg-color-white {
